# psf

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  flake.nix
.github/workflows/: ci.yml
fuzz/: Cargo.toml  cix.dict  psf.dict  seed_corpus.sh
fuzz/fuzz_targets/: fuzz_cix.rs  fuzz_cix_structured.rs  fuzz_psf.rs  fuzz_reader.rs
fuzz/src/: lib.rs
src/: cix.rs  expand.rs  lib.rs  reader.rs
