[workspace]
resolver = "2"
# `fuzz` is its own standalone workspace (cargo-fuzz); keep it out of this one.
exclude = ["fuzz"]

[package]
name = "psf"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jlevere/psf"
authors = ["Jackson Leverett <jacksonleverett@gmail.com>"]
description = "Pure-Rust reader for Microsoft Patch Storage Files (PSTREAM / express download update payloads) and their Container Index (CIX)."
categories = ["parser-implementations", "os::windows-apis"]
keywords = ["windows", "update", "psf", "express", "delta"]

[features]
# Default-off so the core stays sans-IO. Enables the `reader` module: a
# `Read + Seek` adapter that pulls streams by range without holding the
# whole container in memory. Adds no dependencies (std is already used).
default = []
io = []

[dependencies]
thiserror = "2"
yaserde = "0.12"
yaserde_derive = "0.12"

[profile.release]
lto = "thin"
codegen-units = 1
