[workspace]
resolver = "2"
# `fuzz` is its own standalone workspace (cargo-fuzz); keep it out of this one.
exclude = ["fuzz"]

[package]
name = "psf"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jlevere/psf"
authors = ["Jackson Leverett <jacksonleverett@gmail.com>"]
description = "Pure-Rust reader for Microsoft Patch Storage Files (PSTREAM / express download update payloads) and their Container Index (CIX)."
categories = ["parser-implementations", "os::windows-apis"]
keywords = ["windows", "update", "psf", "express", "delta"]

[features]
# Default-off so the core stays sans-IO. Enables the `reader` module: a
# `Read + Seek` adapter that pulls streams by range without holding the
# whole container in memory. Adds no dependencies (std is already used).
default = []
io = []
# Reconstruct target files from a PSF + CIX (RAW verbatim, or PA30/PA31 via
# msdelta). Pulls in msdelta + sha2; the core stays sans-IO/dep-light without it.
# The single shared expand path -- consumers (msu, cbs-apply, uup) call this
# instead of each rolling their own copy.
expand = ["dep:msdelta", "dep:sha2"]

[dependencies]
thiserror = "2"
yaserde = "0.12"
yaserde_derive = "0.12"
# `expand` feature only. Pinned to msdelta main (the same rev every consumer
# pins, so Cargo unifies to one copy).
msdelta = { git = "https://github.com/jlevere/msdelta", rev = "fb5ab88843e854f3fd32d553984d8685ae643913", default-features = false, optional = true }
sha2 = { version = "0.11", optional = true }

[profile.release]
lto = "thin"
codegen-units = 1
