[package]
name = "psf-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Stand alone as its own workspace: depending on the parent `psf` crate by path
# would otherwise pull this fuzz crate into psf's workspace.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.psf]
path = ".."
# The reader target needs the Read+Seek adapter.
features = ["io"]

# Structure-aware CIX model shared by the generative target.
[lib]
name = "psf_fuzz"
path = "src/lib.rs"

[[bin]]
name = "fuzz_psf"
path = "fuzz_targets/fuzz_psf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cix"
path = "fuzz_targets/fuzz_cix.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cix_structured"
path = "fuzz_targets/fuzz_cix_structured.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_reader"
path = "fuzz_targets/fuzz_reader.rs"
test = false
doc = false
bench = false
